--- a/homework_1/styles.css
+++ b/homework_1/styles.css
@@ -1,45 +1,61 @@
+html {
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
     font-family: Arial;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
-.header {
+header {
     padding: 10px 10px;
     display: flex;
     background-color: green;
     color: white;
 }
 
-.main-content {
+main{
     display: flex;
+    flex: 1 0 auto;
+    height: 100%;
 }
 
-.sidebar {
+aside {
     background-color: lightgray;
-    width: 300px;
-    height: 700px;
+    width: 400px;
     padding-left: 10px;
     padding-top: 1px;
+    margin-bottom: 10px;
     margin-top: 10px;
 }
 
-.checkbox {
-    padding-left: 12px;
+hgroup {
+    margin: 20px;
 }
-.content {
+
+article {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
 }
 
-.content_top {
-    margin: 20px;
+ul {
+    padding-left: 10px;
 }
 
-.urls {
+li {
+    list-style: none;
+    padding-bottom: 10px;
+}
+
+section {
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .urls_block {
@@ -56,11 +72,6 @@ body {
     padding-left: 10px;
 }
 
-.buy {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
 
 .item {
     display: flex;
@@ -86,13 +97,11 @@ body {
     height: 20px;
 }
 
-.footer {
-    width: 98vw;
+footer {
     display: inline-flex;
     flex-direction: row;
     justify-content: space-between;
-    position: absolute;
-    bottom: 0;
     background-color: lightgray;
-    padding: 20px 1vw;
+    padding: 20px 10px;
+    flex: 0 0 auto;
 }
