--- a/homework_2/styles.css
+++ b/homework_2/styles.css
@@ -14,14 +14,20 @@ body {
 header {
     padding: 10px 10px;
     display: flex;
+    flex-direction: row;
     background-color: green;
     color: white;
+    position: relative;
+    box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.2);
 }
 
 main{
+    color: black;
+    background-color: white;
     display: flex;
     flex: 1 0 auto;
     padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 aside {
@@ -32,7 +38,7 @@ aside {
     margin-top: 10px;
 }
 
-@media screen and (max-width: 520px){
+@media (max-width: 520px){
     aside {
         display: none;
     }
@@ -46,6 +52,7 @@ section {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
+    flex-grow: 1;
 }
 
 ul {
@@ -72,15 +79,39 @@ article {
     background-color: lightgray;
 }
 
+a {
+    padding-bottom: 5px;
+}
+
 .popular-items {
-    flex-basis: 100%;
     padding-left: 10px;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+}
 
-.popular-items__item {
+@media (max-width: 800px) {
+    .container {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+}
+
+
+.grid {
     display: flex;
     background-color: lightgray;
+    padding: 10px 10px 10px 10px;
+    margin: 10px 10px 0 0 ;
+    flex-basis: calc(33.33% - 20px*2);
+}
+
+.grid:hover {
+    display: flex;
+    background-color: lightgray;
+    transition: all 0.2s ease;
     padding: 10px 10px 10px 10px;
     margin: 10px 10px 0 0 ;
     flex-basis: calc(33.33% - 20px*2);
